Adds API and call to describe policy language
