# anchore_engine/services/policy_engine/api/controllers/synchronous_operations.py
@@ -15,14 +15,14 @@ from werkzeug.exceptions import HTTPException
 from anchore_engine.configuration import localconfig
 from anchore_engine.services.policy_engine.api.models import Image as ImageMsg
 from anchore_engine.services.policy_engine.api.models import ImageUpdateNotification, FeedUpdateNotification, \
-    ImageVulnerabilityListing, \
-    ImageIngressRequest, ImageIngressResponse, LegacyVulnerabilityReport
+    ImageVulnerabilityListing, ImageIngressRequest, ImageIngressResponse, LegacyVulnerabilityReport, \
+    GateSpec, TriggerParamSpec, TriggerSpec
 from anchore_engine.services.policy_engine.api.models import PolicyEvaluation, PolicyEvaluationProblem
 from anchore_engine.db import Image, get_thread_scoped_session as get_session
 from anchore_engine.services.policy_engine.engine.policy.bundles import get_bundle, build_bundle, \
     build_empty_error_execution
 from anchore_engine.services.policy_engine.engine.policy.exceptions import InitializationError
-from anchore_engine.services.policy_engine.engine.policy.gate import ExecutionContext
+from anchore_engine.services.policy_engine.engine.policy.gate import ExecutionContext, Gate
 from anchore_engine.services.policy_engine.engine.tasks import FeedsUpdateTask
 from anchore_engine.services.policy_engine.engine.tasks import ImageLoadTask
 from anchore_engine.services.policy_engine.engine.vulnerabilities import have_vulnerabilities_for
@@ -30,6 +30,8 @@ from anchore_engine.services.policy_engine.engine.vulnerabilities import vulnera
 from anchore_engine.services.policy_engine.engine.feeds import get_selected_feeds_to_sync
 from anchore_engine.db import DistroNamespace
 from anchore_engine.subsys import logger as log
+from anchore_engine.services.policy_engine.engine.policy import gates
+
 TABLE_STYLE_HEADER_LIST = ['CVE_ID', 'Severity', '*Total_Affected', 'Vulnerable_Package', 'Fix_Available', 'Fix_Images', 'Rebuild_Images', 'URL']
 
 
@@ -50,7 +52,6 @@ def get_status():
         return_object = str(err)
 
     return (return_object, httpcode)
-
 
 def create_feed_update(notification):
     """
@@ -414,3 +415,53 @@ def ingress_image(ingress_request):
         return resp.to_dict(), 200
     except Exception as e:
         abort(500, 'Internal error processing image analysis import')
+
+
+def describe_policy():
+    """
+    Return a dictionary/json description of the set of gates available and triggers.
+
+    :param gate_filter: a list of gate names to filter by, if None, then all are returned
+    :return: dict/json description of the gates and triggers
+    """
+
+    try:
+
+        doc = []
+        for k, v in Gate.registry.items():
+            g = GateSpec()
+            g.name = k
+            g.description = v.description if hasattr(v, 'description') else ''
+            g.triggers = []
+
+            for t in v.__triggers__:
+                tr = TriggerSpec()
+                tr.name = t.__trigger_name__
+                tr.description = t.__description__ if t.__description__ else ''
+                tr.parameters = []
+
+                if t.__params__:
+                    for param_name, validator in t.__params__.items():
+                        tps = TriggerParamSpec()
+                        tps.name = param_name
+                        tps.description = ''
+                        tps.validator = ''
+                        tps.validator_description = ''
+
+                        if hasattr(validator, '__validator_description__'):
+                            tps.validator_description = validator.__validator_description__ if validator.__validator_description__ else ''
+
+                        if hasattr(validator, 'validation_criteria'):
+                            tps.validator = validator.validation_criteria() if validator.validation_criteria() else ''
+
+                        tr.parameters.append(tps)
+
+                g.triggers.append(tr)
+
+            doc.append(g.to_dict())
+
+        return doc, 200
+
+    except Exception as e:
+        log.exception('Error describing gate system')
+        abort(500, 'Internal error describing gate configuration')
